# trace_ws

./: .gitignore  README.md
src/ball_detector/: package.xml  setup.py
src/ball_detector/ball_detector/: ball_detector_node.py  ball_distance_node.py
src/kinect_ball_tracker/: CMakeLists.txt  package.xml
src/kinect_ball_tracker/launch/: kinect_ball_tracker.launch.py  light_ball_tracker.launch.py
src/kinect_ball_tracker/src/: kinect_ball_tracker_node.cpp  light_ball_tracker_node.cpp
src/trace_bringup/: CMakeLists.txt  package.xml
src/trace_bringup/launch/: real_robot.launch.py
src/trace_controller/: CMakeLists.txt  package.xml
src/trace_description/: CMakeLists.txt  package.xml
src/trace_description/config/: bldc_joy.yaml  gz_bridge.yaml  joy_teleop.yaml  my_controllers.yaml
src/trace_description/description/: camera.xacro  depth_camera.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro  trace_core.xacro
src/trace_description/launch/: gazebo.launch.py  rsp.launch.py
src/trace_description/meshes/: caster_wheel.stl  chassis.stl
src/trace_description/rviz/: view_robot.rviz
src/trace_description/worlds/: test_world.sdf
src/trace_firmware/: CMakeLists.txt  package.xml  trace_interface.xml
src/trace_firmware/firmware/bldc_control/: bldc_control.ino
src/trace_firmware/firmware/robot_control/: robot_control.ino
src/trace_firmware/include/trace_firmware/: trace_interface.hpp
src/trace_firmware/launch/: ball_orient_test.launch.py  bldc_control.launch.py
src/trace_firmware/src/: trace_interface.cpp
src/trace_firmware/trace_firmware/: ball_collect_node.py  ball_orient_node.py  bldc_node.py  mpu6050_driver.py
